refactored the tab.. added two styles

--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -5,6 +5,7 @@
 @import './popup.min.css';
 @import './side-nav.css';
 @import './table.css';
+@import './tabs.css';
 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
