--- a/resources/assets/css/button.css
+++ b/resources/assets/css/button.css
@@ -3,6 +3,10 @@
         @apply py-5 px-7 text-xs tracking-widest rtl:inline-flex rtl:items-center transition focus:outline-none focus:!ring-opacity-25 focus:ring-offset-0
     }
 
+    .bw-button-circle {
+        @apply focus:outline-none focus:!ring-opacity-25 focus:ring-offset-0
+    }
+
     .bw-button.big {
         @apply py-7 px-12
     }
