cleaned up shadows in dark mode and resized notification

--- a/resources/assets/css/table.css
+++ b/resources/assets/css/table.css
@@ -23,6 +23,10 @@
         border-t border-gray-200/20 dark:border-dark-800
     }
 
+    .bw-table.has-no-data thead > tr {
+        @apply !border-transparent
+    }
+
     .bw-table.uppercase-headers thead > tr > th {
         @apply uppercase
     }
