--- a/resources/assets/css/input.css
+++ b/resources/assets/css/input.css
@@ -5,13 +5,25 @@
         !outline-none
         !ring-0
         border-2
-        w-full text-slate-600 border-slate-300/50 dark:text-dark-300 dark:border-dark-700 dark:bg-transparent /*dark-800*/
+        w-full text-slate-600 border-slate-300/50 dark:text-dark-300 dark:border-dark-600 dark:bg-transparent /*dark-800*/
         focus:outline-none
         focus:border-2
-        focus:border-primary-400 dark:focus:border-dark-600 dark:placeholder-dark-500/70 transition-all
+        focus:border-primary-500 dark:focus:border-dark-500 dark:placeholder-dark-400/60 transition-all
         rounded-md
         text-sm
-        p-4
+        px-3.5 py-[8.5px]
+    }
+
+    .bw-input.small {
+        @apply py-2
+    }
+
+    .bw-input.medium {
+        @apply py-[12px]
+    }
+
+    .bw-input.big {
+        @apply py-5
     }
 
     input.no-label, .bw-input.no-label, .bw-textarea.bw-input.no-label {
@@ -30,9 +42,24 @@
         text-xs
         px-1
         transition-all
-        peer-placeholder-shown:top-[19px]
-        peer-focus:-top-2 bg-white text-primary-900/40 dark:text-dark-500 z-20 dark:bg-dark-800 dark:px-2 dark:rounded-md dark:py-0.5
+        peer-placeholder-shown:top-[11.8px]
+        peer-focus:-top-2 bg-white text-primary-900/40 dark:text-dark-400/60 z-20 dark:bg-dark-700 dark:px-2 dark:rounded-md dark:py-0.5
         /*dark-800*/
+    }
+
+    .form-label.small {
+        @apply
+        peer-placeholder-shown:!top-[11px] peer-focus:!-top-2
+    }
+
+    .form-label.medium {
+        @apply
+        peer-placeholder-shown:!top-[15px] peer-focus:!-top-2
+    }
+
+    .form-label.big {
+        @apply
+        peer-placeholder-shown:!top-[23px] peer-focus:!-top-2
     }
 
     .prefix svg, .suffix svg {
