--- a/resources/assets/css/button.css
+++ b/resources/assets/css/button.css
@@ -31,16 +31,15 @@
         @apply pt-[19px] pb-[20px] px-8 !text-[16px]
     }
 
-    .bw-button.primary:not(.outlined), .bw-button-circle.primary:not(.outlined) {
-        @apply active:translate-y-0.5 text-white text-opacity-90 hover:text-opacity-100
-    }
-
+    .bw-button.primary:not(.outlined), .bw-button-circle.primary:not(.outlined),
     .bw-button.secondary:not(.outlined), .bw-button-circle.secondary:not(.outlined) {
-        @apply active:translate-y-0.5 transition text-white text-opacity-90 hover:text-opacity-100
+        @apply active:translate-y-0.5 text-white text-opacity-90 hover:text-opacity-100 hover:!no-underline
+        active:opacity-100 focus:outline-none focus:!ring-opacity-25 focus:!ring-offset-0
     }
 
-    .bw-button.primary.outlined, .bw-button-circle.primary.outlined, .bw-button.secondary.outlined, .bw-button-circle.secondary.outlined {
-        @apply bg-transparent
+    .bw-button.primary.outlined, .bw-button-circle.primary.outlined,
+    .bw-button.secondary.outlined, .bw-button-circle.secondary.outlined {
+        @apply bg-transparent focus:outline-none focus:!ring-opacity-25 focus:!ring-offset-0
     }
 
     .bw-button.disabled, .bw-button-circle.disabled {
