--- a/resources/assets/css/table.css
+++ b/resources/assets/css/table.css
@@ -8,7 +8,7 @@
     }
 
     .bw-table tr > td {
-        @apply py-4 px-3 align-top text-sm text-slate-600/80 dark:text-dark-400 bg-white dark:bg-dark-800/25 border-x-2 border-transparent
+        @apply py-4 px-3 align-top text-sm text-slate-600/80 dark:text-dark-400 bg-white dark:bg-dark-800/25 border-x-2 border-transparent leading-6
         /*dark:bg-dark-600/40*/
     }
 
