--- a/resources/assets/css/input.css
+++ b/resources/assets/css/input.css
@@ -14,7 +14,7 @@
         px-3.5 py-[8.5px]
     }
 
-    .bw-input[disabled], .bw-input[readonly] {
+    .bw-input[disabled], .bw-input[readonly], fieldset[disabled] .bw-input {
         @apply !bg-gray-100/60 dark:!bg-white/10 dark:!opacity-40 !text-slate-400/70 dark:!text-dark-400 cursor-not-allowed dark:!border-dark-500/70
     }
 
@@ -66,7 +66,7 @@
         peer-placeholder-shown:!top-[23px] peer-focus:!-top-2
     }
 
-    .bw-select div.clickable.disabled, .bw-select div.clickable.readonly {
+    .bw-select div.clickable.disabled, .bw-select div.clickable.readonly, fieldset[disabled] .bw-select {
         @apply !bg-gray-100/60 opacity-95 dark:opacity-70 dark:!bg-white/5 select-none cursor-not-allowed
     }
 
