--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -3,6 +3,7 @@
 @import './table.css';
 @import './tabs.css';
 @import './dropdown.css';
+@import './progress.css';
 @import './popup.min.css';
 @import './side-nav.css';
 
