--- a/resources/assets/css/slider.css
+++ b/resources/assets/css/slider.css
@@ -1,7 +1,7 @@
 @layer components {
 
     .bw-slider {
-        @apply appearance-none w-full h-2 bg-gray-200 outline-0 opacity-90 rounded-full transition-opacity;
+        @apply appearance-none w-full h-2 bg-gray-200 outline-0 opacity-90 rounded-full transition-opacity absolute;
     }
 
     .bw-slider::-webkit-slider-thumb {
