--- a/resources/assets/css/input.css
+++ b/resources/assets/css/input.css
@@ -5,7 +5,7 @@
         !outline-none
         !ring-0
         border-2
-        w-full text-slate-600 dark:text-dark-300 border-slate-300/50 dark:border-dark-600 dark:bg-transparent /*dark-800*/
+        w-full text-slate-600 dark:text-dark-300 border-slate-300/50 hover:border-slate-300 dark:border-dark-600 dark:hover:border-dark-500/50 dark:bg-transparent
         focus:outline-none
         focus:border-2
         focus:border-primary-500 dark:focus:border-dark-500 dark:placeholder-dark-400/60 transition-all
