--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -2,6 +2,7 @@
 @import './input.css';
 @import './table.css';
 @import './tabs.css';
+@import './datepicker.css';
 @import './dropdown.css';
 @import './progress.css';
 @import './popup.min.css';
