Refactor select and modal components UI and validation
Updated select and modal components for improved styling and accessibility. Refactored validation logic in helpers.js to use utility classes instead of direct border color manipulation. Adjusted CSS classes for more consistent appearance, enhanced focus and hover states, and improved button layouts in modal footers.

--- a/resources/assets/css/input.css
+++ b/resources/assets/css/input.css
@@ -18,6 +18,7 @@
 
     .bw-textarea:not(.has-error),
     .bw-raw-select:not(.has-error),
+    .bw-select .clickable:not(.has-error),
     .bw-input:not(.has-error) {
         @apply border-slate-400/60 hover:border-slate-400 dark:border-dark-600 dark:hover:border-dark-500/50 dark:focus:border-dark-500
     }
