Update table styles and Blade component
Refined table styles in table.css and updated the table Blade component for improved appearance and consistency. Also updated the minified bladewind-ui CSS to reflect these changes.

--- a/resources/assets/css/table.css
+++ b/resources/assets/css/table.css
@@ -48,7 +48,7 @@
     }
 
     .bw-table-filter-bar {
-        @apply bg-slate-200/50 p-1.5 dark:bg-dark-800/30 rounded-md
+        @apply bg-slate-200/50 dark:bg-dark-800/30 rounded-md
     }
 
     .bw-table-filter-bar input {
